[package]
name = "libchip8"
version = "0.1.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
log4rs = "0.8"
minifb = "0.11"
rand = "0.6"
structopt = "0.2"
