[package]
name = "libchip8"
version = "0.1.2"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/YushiOMOTE/libchip8"
keywords = ["chip8", "no_std"]
description = "An OS-independent chip8 interpreter library written in Rust."
readme = "README.md"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
log4rs = "0.8"
minifb = "0.11"
rand = "0.6"
structopt = "0.2"
